force-app/main/default/objects/Case/fields/IsDinInvalidMailFormat__c.field-meta.xml
<CustomField>
    <fullName>IsDinInvalidMailFormat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Din Invalid Mail Format</label>
    <type>Checkbox</type>
</CustomField>