force-app/main/default/objects/Case/fields/ReasonToRejectDinEmail__c.field-meta.xml
<CustomField>
    <fullName>ReasonToRejectDinEmail__c</fullName>
    <label>Reason To Reject Din Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>