force-app/main/default/objects/Case/fields/Sucessful_Scan__c.field-meta.xml
<CustomField>
    <fullName>Sucessful_Scan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sucessful Scan</label>
    <type>Checkbox</type>
</CustomField>